--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
     "codecov": "^3.2.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.2",
     "serve": "^10.1.2",
     "service-worker-mock": "^2.0.0",
     "source-map-explorer": "^1.7.0",
     "surge": "^0.20.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.4",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
-    "prettier": "^1.16.4"
+    "testcafe": "^1.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
