ci(CircleCI): Config
Initial config to run e2e tests

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "mv build/index.html build/200.html && surge --project ./build && mv build/200.html build/index.html",
-    "analyze": "source-map-explorer build/static/js/main.*"
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "serve:build": "serve -s build",
+    "e2e:ci": "testcafe chrome:headless e2e/*.js --app 'yarn serve:build'"
   },
   "eslintConfig": {
     "extends": "react-app"
