--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,5 @@ jobs:
       - run:
           name: Run e2e tests
           command: yarn e2e:ci
+      - store_test_results:
+          path: /tmp/test-results
