--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-ga": "^2.5.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-toastify": "^4.5.2",
